     Korean, Norwegian, Portuguese (Brazil), Romanian, Spanish, Swedish, Turkish
   * updated man pages: Swedish
   * updated manual: Swedish
 * units
   * fixed the resistances of the Sky Drake line
   * increased the holy resistance for units with holy attacks to 40% for level 2
     and 60% for level 3
 * Wesnoth engine
   * new unit display graphic engine...
   * added unit cost to help
 * WML improvements
   * interpret the variables/arrays in a few more tags
   * floating damage/heal or status can be printed over a modified unit using
     the 'text', 'red', 'blue', and 'green' keys in [unstore_unit]
   * store_locations now stores terrain as well as x,y
   * [effect] can now apply_to movement_costs, defense and resistance
 * multiplayer settings:
   * two additional MP timer settings, time reservoir limit and action bonus:
     * Reservoir prevents the turn timer from exceeding an upper limit.
     * Action bonus is added after turn for each attack, capture, and recruit.
   * share view/map option removed from multiplayer create screen
   * slider for each player to adjust their base income
 * misc
   * fix alt key under MacosX
   * help contents available from title screen
   * preferences available from multiplayer lobby
   * simplified upkeep: Each controlled village gives 2 GP per turn, and 
     each unit costs 1*(# of Levels) GP per turn, unless loyal.
   * new /help command in mp lobby to get info on available commands
   * :mute command to silent observers
   * host changes automatically if game creator leaves => no disconnections
   * new --turns= commandline parameter

Version 1.1.2:
 * campaigns
   * campaigns removed from mainline: Son of the Black Eye, The Dark Hordes
   * campaigns added to mainline:
     * The South Guard
     * Under the Burning Suns
   * new tutorial replacing the old one
   * Eastern Invasion
     * rewrote dialogue in Lake Vrug, Evacuation, and The Drowned Plains
     * redid cave maps to take advantage of new terrains