@@ -116,6 +116,8 @@ utf8_string uppercase(const utf8_string&);
 /** Returns a lowercased version of the string */
 utf8_string lowercase(const utf8_string&);
 
+bool wildcard_string_match(const std::string& str, const std::string& match);
+
 }
 
 // handy wrapper around interpolate_variables_into_string and gettext
