@@ -1,7 +1,7 @@
 [Project]
 FileName=wesnoth.dev
 Name=wesnoth
-UnitCount=236
+UnitCount=238
 Type=1
 Ver=1
 ObjFiles=
@@ -2408,7 +2408,17 @@ OverrideBuildCmd=0
 BuildCmd=
 
 [Unit237]
-FileName=src\ai_xan.cpp
+FileName=src\generic_event.hpp
+CompileCpp=1
+Folder=wesnoth
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[Unit238]
+FileName=src\generic_event.cpp
 CompileCpp=1
 Folder=wesnoth
 Compile=1
