@@ -68,6 +68,10 @@ SVN trunk (1.1.2+svn):
  * Wesnoth engine
    * new unit display graphic engine...
    * added unit cost to help
+ * Wesnoth server
+   * disallowed names, accepted versions, redirected versions, proxy versions, and 
+     ip bans can now use '*' and '?' for wildcard matching
+   * host changes automatically if game creator leaves => no disconnections
  * WML improvements
    * interpret the variables/arrays in a few more tags
    * floating damage/heal or status can be printed over a modified unit using
@@ -88,7 +92,6 @@ SVN trunk (1.1.2+svn):
      each unit costs 1*(# of Levels) GP per turn, unless loyal.
    * new /help command in mp lobby to get info on available commands
    * :mute command to silent observers
-   * host changes automatically if game creator leaves => no disconnections
    * new --turns= commandline parameter
 
 Version 1.1.2:
